// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AufgabenSidebar Rendering should render list of Vorgaenge 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col h-full border-r border-gray-200"
  >
    <h2
      class="p-4 text-xl font-bold"
    >
      Aufgabenliste
    </h2>
    <div
      class="overflow-y-auto"
    >
      <p
        data-testid="vorgang-item-mock"
      >
        Vorgang Item
      </p>
      <p
        data-testid="vorgang-item-mock"
      >
        Vorgang Item
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AufgabenSidebar Rendering should show error message when error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col h-full border-r border-gray-200"
  >
    <h2
      class="p-4 text-xl font-bold"
    >
      Aufgabenliste
    </h2>
    <div
      class="overflow-y-auto"
    >
      <div
        class="p-4"
      >
        Fehler beim Laden
      </div>
    </div>
  </div>
</DocumentFragment>
`;
